<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.github.mikephil.charting.charts.LineChart
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/chart"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rvOtherCurrencies"
        app:layout_constraintTop_toBottomOf="@id/chart"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        tools:itemCount="3"
        tools:listitem="@layout/item_historical"
        android:id="@+id/rvHistorical"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/rvHistorical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/item_historical"
        tools:itemCount="10"
        android:id="@+id/rvOtherCurrencies"/>

</androidx.constraintlayout.widget.ConstraintLayout>