<resources>
    <string name="app_name">CurrencyApp</string>
    <string name="swipe_button">Swipe Button</string>
    <string name="from_currency_hint">1</string>
    <string name="details">Details</string>
    <string name="error_selection_currencies">Please select From and To Currency</string>
    <string name="day">Day</string>

    <array name="currencies_From">
        <item>From</item>
        <item>USD</item>
        <item>EUR</item>
        <item>AUD</item>
        <item>PLN</item>
        <item>CAD</item>
        <item>MXN</item>
    </array>

    <array name="currencies_To">
        <item>To</item>
        <item>USD</item>
        <item>EUR</item>
        <item>AUD</item>
        <item>PLN</item>
        <item>CAD</item>
        <item>MXN</item>
    </array>
</resources>